Fix alignment of table cell text

--- a/wcfsetup/install/files/style/ui/tabularBox.scss
+++ b/wcfsetup/install/files/style/ui/tabularBox.scss
@@ -132,9 +132,12 @@
 	td,
 	th {
 		padding: 10px;
-		text-align: left;
 		vertical-align: middle;
-	
+		
+		&:not(.text-center):not(.text-right):not(.text-justify) {
+			text-align: left;
+		}
+		
 		> label {
 			cursor: pointer;
 			display: block;
